add site into google search console

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="TechsBuilds - It Solution"
     />
+
+    <meta name="google-site-verification" content="5u9iCua_J0no2YEOjnI0mA3jh_sEzjEZpUbdsK5JpVw" />
     
     <!--
       manifest.json provides metadata used when your web app is installed on a
