added fast2sms for verification

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
 
     <meta name="google-site-verification" content="5u9iCua_J0no2YEOjnI0mA3jh_sEzjEZpUbdsK5JpVw" />
+    <meta name="fast2sms" content="wIBD4EfYKvCGsasA7t5zycYM9EWud2QY">
     
     <!--
       manifest.json provides metadata used when your web app is installed on a
